ajustando a pag lista de consultas

--- a/Clicina-Veterinaria-master/src/main/resources/templates/confirmacao_agendamento.html
+++ b/Clicina-Veterinaria-master/src/main/resources/templates/confirmacao_agendamento.html
@@ -57,6 +57,8 @@
     </div>
     <!-- Adicione o botão com link para a página de consultas agendadas -->
     <button onclick="window.location.href='/consultas'" class="btn">Ver Consultas Agendadas</button>
+    <button onclick="window.location.href='/agendar'" class="btn">Agendar nova consulta</button>
+
 </div>
 </body>
 </html>
