--- a/Clicina-Veterinaria-master/src/main/resources/templates/formulario_agendamento.html
+++ b/Clicina-Veterinaria-master/src/main/resources/templates/formulario_agendamento.html
@@ -11,6 +11,63 @@
     <!-- Inclua o arquivo de localização para o português do Brasil -->
     <script src="https://code.jquery.com/ui/1.13.0/i18n/jquery-ui-i18n.min.js"></script>
 </head>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f4f4f4;
+    }
+
+    .container {
+        max-width: 600px;
+        margin: 50px auto;
+        padding: 20px;
+        background-color: #f2f2f2;
+        border-radius: 10px;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        display: flex;
+        justify-content: center; /* Centraliza horizontalmente */
+    }
+
+    h1 {
+        text-align: center;
+        color: #333;
+    }
+
+    .form {
+        display: flex;
+        flex-direction: column;
+        justi
+    }
+
+    label {
+        margin-bottom: 5px;
+        color: #555;
+    }
+
+    input[type="text"], input[type="submit"] {
+        padding: 10px;
+        margin-bottom: 10px;
+        border: none;
+        border-radius: 5px;
+        font-size: 16px;
+    }
+
+    input[type="submit"] {
+        background-color: #4CAF50;
+        color: white;
+        cursor: pointer;
+    }
+
+    input[type="submit"]:hover {
+        background-color: #45a049;
+    }
+
+    .datepicker {
+        width: 30%;
+    }
+</style>
 <body>
 <h1>Formulário de Agendamento</h1>
 <form action="/agendar" method="post">
