--- a/Clicina-Veterinaria-master/src/main/resources/templates/index.html
+++ b/Clicina-Veterinaria-master/src/main/resources/templates/index.html
@@ -452,7 +452,7 @@
 <footer>
     <div class="redes-sociais">
         <a href="https://www.facebook.com/suaclinica" target="_blank"><img src="img/facebook.png" alt="Facebook"></a>
-        <a href="https://www.instagram.com/suaclinica" target="_blank"><img src="img/instagram.png" alt="Instagram"></a>
+        <a href="https://www.instagram.com/marcossousa.vet/" target="_blank"><img src="img/instagram.png" alt="Instagram"></a>
         <!-- Adicione mais links para outras redes sociais, se desejar -->
     </div>
     <p>Endereço: Rua Exemplo, 123 - Cidade, Estado</p>
