Corrigindo o horário de agendamento

--- a/Clicina-Veterinaria-master/src/main/resources/templates/formulario_agendamento.html
+++ b/Clicina-Veterinaria-master/src/main/resources/templates/formulario_agendamento.html
@@ -97,7 +97,9 @@
 <script>
     $(function() {
         $.datepicker.setDefaults($.datepicker.regional['pt-BR']);
-        $(".datepicker").datepicker();
+        $(".datepicker").datepicker({
+            dateFormat: 'dd/mm/yy'
+        });
     });
 
     function validateForm() {
