--- a/Clicina-Veterinaria-master/src/main/resources/templates/index.html
+++ b/Clicina-Veterinaria-master/src/main/resources/templates/index.html
@@ -455,7 +455,7 @@
         <a href="https://www.instagram.com/suaclinica" target="_blank"><img src="img/instagram.png" alt="Instagram"></a>
         <!-- Adicione mais links para outras redes sociais, se desejar -->
     </div>
-    <p>Endereço: Rua Exemplo, 123 - Cidade, Estado</p>
+    <p>Endereço: R. Dr. Gilberto Studart, 800 - Cocó, Fortaleza - CE, 60192-105</p>
     <p>Desenvolvido com propósitos educativos.</p>
 </footer>
 
